[metadata]
name = exhibitor2dns
description-file = README.rst
home-page = http://github.com/benley/exhibitor2dns
author = Benjamin Staffin
author-email = benley@gmail.com
summary = Dynamically sync Route53 DNS entries for Zookeeper servers in an Exhibitor cluster
license = Apache-2

[files]
packages =
  exhibitor2dns

[entry_points]
console_scripts =
  exhibitor2dns = exhibitor2dns.main:main

[wheel]
universal = 1

[pep8]
exclude = *.egg_info/*,*.egg/*
