[metadata]
name = exhibitor2dns
description-file = README.rst
home-page = http://github.com/benley/exhibitor2dns
author = Benjamin Staffin
author-email = benley@gmail.com
summary = Dynamically sync Route53 DNS entries for Zookeeper servers in an Exhibitor cluster
license = Apache License, Version 2.0
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    exhibitor2dns

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    exhibitor2dns = exhibitor2dns.main:main

[wheel]
universal = 1

[flake8]
show-source = True
exclude = .venv,.tox,dist,doc,build,*.egg,*.egg_info/*
